Address PR review: fix N+1 auth, NPE in importer, scope validation, typed DTO
- UserRepository: add findByIdWithGeo with 4 LEFT JOIN FETCH to eliminate
  N+1 on every authenticated request when building AuthPrincipal
- AuthTokenFilter: use findByIdWithGeo instead of findById
- GeoDataImporter: remove @Transactional from run() so each save() uses its
  own short transaction; store IDs in maps + use getReferenceById() for FK
  proxies; add null guard for missing lat/lng to prevent NPE
- AdminUserService: replace 4 individual findById loops with generic
  resolveAll(findAllById); switch validateCreatorScope to ID-based comparison
  to prevent false positives when powiaty/gminy share names across regions
- MiejscowoscRepository: accept pre-escaped pattern with ESCAPE '\' clause
- GeoController: escape LIKE wildcards (%, _) in user input; replace untyped
  Map<String, Object> with typed MiejscowoscSearchResponse DTO
- AdminUserResponse: unify 4 near-identical toList* methods into one generic
  toGeoList(Set<T>, idFn, nameFn)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>